.k8s/manifests/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orange-wallet
  labels:
    name: orange-wallet
    environment: production
    project: orange-wallet
