.k8s/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orange-wallet-ingress
  namespace: orange-wallet
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.orangebybni.my.id
        - auth.orangebybni.my.id
      secretName: orange-wallet-tls
  rules:
    - host: api.orangebybni.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 8081

    - host: auth.orangebybni.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication-service
                port:
                  number: 8081

    - host: api.orangebybni.my.id
      http:
        paths:
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8082

    - host: api.orangebybni.my.id
      http:
        paths:
          - path: /api/v1/wallets
            pathType: Prefix
            backend:
              service:
                name: wallet-service
                port:
                  number: 8083

    - host: api.orangebybni.my.id
      http:
        paths:
          - path: /api/v1/transactions
            pathType: Prefix
            backend:
              service:
                name: transaction-service
                port:
                  number: 8084
